--- a/css/flash.css
+++ b/css/flash.css
@@ -1,13 +1,16 @@
+.warning{
+  background-color:#FF4C4C !important;
+  color:white !important;
+}
 div#flash {
     position          : fixed;
     opacity           : 0.8;
     top: 0.2em;
-  /*  right: 1em;*/
-    left: 20cm; /* à régler par rapport à l'application */
+    right: 1em;
     margin: 0;
     padding: 0;
     z-index: 1000;
-    max-width: 30%;
+    max-width: 40%;
     min-width: 30%; 
   }
   div#flash div#inner_flash {
@@ -15,7 +18,6 @@ div#flash {
     overflow-y: auto; }
     div#flash div#inner_flash div {
       padding: 0.17em 0.95em 0.1em;
-      background-color: inherit !important;
     }
     div#flash div#inner_flash span {
       display:block;
