--- a/css/edit.css
+++ b/css/edit.css
@@ -7,6 +7,7 @@ div.edit_box {
   padding     : 1em;
   border      : 2px solid #BBB;
   opacity     : 0.7;
+  min-width   : 300px;
 }
 
 div.edit_box.actived { opacity: 1 !important;}
@@ -16,5 +17,5 @@ div.edit_box > div.buttons {
   margin-top    :1em;
 }
 div.edit_box > div.buttons > input[type="button"] {
-  margin-right  :1em;
+  font-size   : 11.3pt !important;
 }
